--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <title>Weather app</title>
 </head>
 <body>
+
+        
+    <div class="container">
+        <div class="search-box">
+            <i class="fa-solid fa-location-dot">
+                <input type="text" placeholder="Enter your location" name="" id="">
+                <button class="fa-solid fa-magnifying-glass"></button>
+            </i>
+        </div>
+    </div>
+
     <script src="https://kit.fontawesome.com/7c8801c017.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
     
