404 image for unknown locations

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         </div>
     </div>
 
+    <div class="not-found"><img src="images/404.png" alt="">
+        <p>Location not found</p>
+    </div>
+
     <script src="https://kit.fontawesome.com/7c8801c017.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
     
