--- a/index.html
+++ b/index.html
@@ -25,6 +25,28 @@
         <p>Location not found</p>
     </div>
 
+    <div class="weather-box">
+        <img src="">
+        <p class="temperature"></p>
+        <p class="description"></p>
+    </div>
+
+    <div class="weather-details">
+        <div class="humidity">
+            <i class="fa-solid fa-water"></i>
+            <div class="test">
+                <span></span>
+                <p>Humidity</p>
+            </div>
+        </div>
+        <div class="wind">
+            <i class="fa-solid fa-wind"></i>
+            <div class="test">
+                <span></span>
+                <p>Wind Speed</p>
+            </div>
+        </div>
+    </div>
     <script src="https://kit.fontawesome.com/7c8801c017.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
     
