Weather box and details with fadein

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="not-found">
             <img src="images/404.png" alt="">
-            <p>Location not found</p>
+            <p class="text">Location not found</p>
         </div>
 
         <div class="weather-box">
