--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="weather-details">
             <div class="humidity">
                 <i class="fa-solid fa-water"></i>
-                <div class="test">
+                <div class="text">
                     <span></span>
                     <p>Humidity</p>
                 </div>
